# qtdemo

./: CMakeLists.txt  main.cpp  main.qml
